Update app version to 2.9.0

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -135,7 +135,7 @@ workflows:
       - name: Increment build number
         script: |
           cd $CM_BUILD_DIR/MoppApp
-          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number --pre-release-version "2.8.0" $APP_STORE_APP_ID)
+          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number --pre-release-version $APP_VERSION $APP_STORE_APP_ID)
           LATEST_BUILD_NUMBER=$((LATEST_BUILD_NUMBER + 1))
           echo "LATEST_BUILD_NUMBER=$LATEST_BUILD_NUMBER" >> $CM_ENV
           agvtool new-version -all "$LATEST_BUILD_NUMBER"
