--- a/MoppLib/MoppLib/libdigidocpp/libdigidocpp.iphoneos/lib/digidocpp.framework/Info.plist
+++ b/MoppLib/MoppLib/libdigidocpp/libdigidocpp.iphoneos/lib/digidocpp.framework/Info.plist
@@ -12,14 +12,16 @@
 	<string>ee.ria.digidocpp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string></string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.2.0</string>
+	<string>4.2.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1437</string>
+	<string>36</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>MinimumOSVersion</key>
