Use Live Activity to show Smart-ID control code
Signed-off-by: Raul Metsma <raul@metsma.ee>

--- a/MoppApp/MoppApp/Info.plist
+++ b/MoppApp/MoppApp/Info.plist
@@ -219,6 +219,8 @@
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
+	<key>NFCReaderUsageDescription</key>
+	<string>This app uses NFC to scan ID-cards</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
@@ -235,12 +237,12 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NFCReaderUsageDescription</key>
-	<string>This app uses NFC to scan ID-cards</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Bluetooth card reader is used to read data from ID card</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Bluetooth card reader is used to read data from ID card</string>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Roboto-Black.ttf</string>
